# transqlate

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  finetune_phi4_nl2sql.py  finetune_requirements.txt  pyproject.toml  requirements.txt
benchmark/: README.md
benchmark/scripts/: run_inference.py
model/: .placeholder
src/: finetune.py  finetune_phi4_nl2sql.py  finetune_with_xformers.py  merge.py
src/cli/: cli.py
src/schema_pipeline/: formatter.py  orchestrator.py  selector.py
src/transqlate/: Dockerfile  embedding_utils.py  inference.py  requirements.txt  sql_transform.py
src/transqlate/cli/: cli.py
src/transqlate/schema_pipeline/: extractor.py  graph.py  orchestrator.py  selector.py
src/transqlate/utils/: hardware.py
tests/: test_cli_edit.py  test_cot_postprocess.py  test_extract_sql.py  test_format_prompt.py  test_mssql_postprocess.py  test_oracle_semicolon.py  test_quant_gating.py  test_run_inference.py  test_schema_extractors.py  test_troubleshoot.py  transform_test.py
tests/fixtures/: schema.sql
