[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transqlate"
version = "0.1.9"
description = "Natural Language to SQL CLI powered by a fine-tuned LLM."
authors = [
    { name="Shaurya Sethi", email="shauryaswapansethi@gmail.com" }
]
readme = "pypi-description.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "cx_oracle==8.3.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "psycopg2_binary==2.9.10",
    "pwinput==1.0.3",
    "pyodbc==5.2.0",
    "pytest==8.3.5",
    "rapidfuzz==3.13.0",
    "rich==14.0.0",
    "sentence_transformers==4.1.0",
    "transformers==4.51.3"
    "torch==2.7.0", 
    "accelerate==1.7.0",
    "huggingface_hub==0.31.2"
]

[project.optional-dependencies]
# For CUDA 11.8 users:
cuda118 = [
    "torch==2.7.0+cu118 ; platform_system=='Linux' and platform_machine=='x86_64'",
    "bitsandbytes==0.46.0",
]

# For CUDA 12.6 users:
cuda126 = [
    "torch==2.7.0+cu126 ; platform_system=='Linux' and platform_machine=='x86_64'",
    "bitsandbytes==0.46.0",
]

# For CUDA 12.8 users:
cuda128 = [
    "torch==2.7.0+cu128 ; platform_system=='Linux' and platform_machine=='x86_64'",
    "bitsandbytes==0.46.0",
]

[project.scripts]
transqlate = "transqlate.cli.cli:main"
